made changes as requested, added founders message, changed donation

--- a/message.html
+++ b/message.html
@@ -39,7 +39,7 @@
 
 <!--  ############################################################################################################################################################################################# -->
   <!-- Primary Meta Tags -->
-  <title>TIFC - Islamic Education</title>
+  <title>TIFC - Our Message</title>
   <meta name="title" content="The Ilahi Foundation of Canada">
   <meta name="description" content="Helping the needy, one city at a time">
   <meta name="keywords" content="Pakistan, Clean Water, education">
@@ -67,6 +67,8 @@
   <!-- GOOGLE FONTS UPLOAD -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,800&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Coustard&display=swap" rel="stylesheet">
+
 
 <!-- AOS CSS -->
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -75,11 +77,18 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="app.css">
-  <link rel="stylesheet" href="donate.css">
-    <link rel="stylesheet" href="islamicEdu.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+<!-- Custom CSS -->
+<link rel="stylesheet" href="app.css">
+<link rel="stylesheet" href="donate.css">
+<link rel="stylesheet" href="islamicEdu.css">
+<link rel="stylesheet" href="mission.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+<!-- MAPPING Resources -->
+<script src="https://www.amcharts.com/lib/4/core.js"></script>
+<script src="https://www.amcharts.com/lib/4/maps.js"></script>
+<script src="https://www.amcharts.com/lib/4/geodata/worldLow.js"></script>
+<script src="https://www.amcharts.com/lib/4/themes/animated.js"></script>
 
 
 </head>
@@ -137,93 +146,76 @@
 
   </section>
 
-<section class="courses-section">
-
+<section class="mission-top">
   <div class="container">
-<div class="row islamiccoursetitle">
-  <h1 class="text-center">Courses</h1>
-</div>
-
     <div class="row">
-      <div class="col-sm-4">
-        <div data-aos="zoom-in">
-
-        <div class="card">
-          <div style=" width:100%; text-align:center">
-          <img class="card-img-top" src="imgs/Tajweed.png" alt="Card image cap" >
-               </div>
-          <div class="card-body">
-            <h5 class="card-title">Tajweed course</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe maxime eveniet tempora similique labore omnis doloremque voluptatem, dolores tempore eligendi.</p>
-            <a href="#" class="btn btn-primary startCourse">Start Course</a>
-          </div>
-        </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card" data-aos="zoom-in">
-            <div style=" width:100%; text-align:center">
-          <img class="card-img-top" src="imgs/Tajweed.png" alt="Card image cap" >
-        </div>
-          <div class="card-body">
-            <h5 class="card-title">Aalimah course</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam, a, praesentium. Nam sunt recusandae nobis?</p>
-            <a href="#" class="btn btn-primary startCourse">Start Course</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card" data-aos="zoom-in">
-          <div style=" width:100%; text-align:center">
-         <img class="card-img-top" src="imgs/logo.png" alt="Card image cap" >
-       </div>
-          <div class="card-body">
-            <h5 class="card-title">Tafseer course</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum nisi expedita asperiores harum, non odit, odio iusto.</p>
-            <a href="#" class="btn btn-primary">Beginners</a>
-            <a href="#" class="btn btn-primary">Advanced</a>
-          </div>
-        </div>
+      <div class="col-12">
+        <h1 class="pt-5 text-center">Message From the <br> Founders</h1>
       </div>
     </div>
-
-    <div class="row">
-      <div class="col-sm-4">
-        <div class="card" data-aos="zoom-in">
-           <div style=" width:100%; text-align:center">
-          <img class="card-img-top" src="imgs/logo.png" alt="Card image cap" >
-        </div>
-          <div class="card-body">
-            <h5 class="card-title">Islamic Studies</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, temporibus beatae illo adipisci.</p>
-            <a href="#" class="btn btn-primary">English</a>
-            <a href="#" class="btn btn-primary">Urdu</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-4">
-        <div class="card" data-aos="zoom-in">
-          <div style=" width:100%; text-align:center">
-         <img class="card-img-top" src="imgs/logo.png" alt="Card image cap" >
-       </div>
-          <div class="card-body">
-            <h5 class="card-title">Arabic Grammar</h5>
-            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus laborum quaerat eum similique sapiente amet dolor officia repellat fugiat, facere voluptatibus praesentium vitae optio labore.</p>
-            <a href="#" class="btn btn-primary">Beginners</a>
-            <a href="#" class="btn btn-primary">Advanced</a>
-          </div>
-        </div>
-      </div>
-
-    </div>
-
   </div>
 
 </section>
 
+
+<section class="firstPara foundermessage">
+  <div class="container ">
+    <div class="row text-center justify-content-center">
+      <!-- <div class="col-2"></div> -->
+      <div class="col-12 col-md-8">
+        <p>
+          Respected Brothers & Sisters,
+        </p>
+        <div class="container salaam">
+        <img src="imgs/salaam.png" alt="mission Pic" style="width:30%;">
+        </div>
+
+        <p>
+          On behalf of the executive team, members and volunteers, I would like to officially launch “The Ilahi Foundation, Canada—a non-profit charitable organization.”
+        </p>
+        <p>
+          Our aim is based on serving the humanity by considering as a social responsibility to support diverse local and international communities those are in need of basic necessities of life; shelter, food, clean drinking water and education.
+        </p>
+      </div>
+      <!-- <div class="col-2"></div> -->
+    </div>
+  </div>
+
+
+
+  <div class="container py-2">
+    <div class="row text-center justify-content-center">
+      <!-- <div class="col-2"></div> -->
+      <div class="col-12 col-md-8">
+        <p>
+          As an Executive Director, I firmly believe that increased involvement of blessed and fortune individuals and families is the only way to create a sustainable and prosperous society, and  to share happiness among those who are in need.
+        </p>
+        <p>
+          I urge you to consider joining TIF Canada as this organization will assist you in spending your contributions on important projects to improve the life of poor and needy families.
+        </p>
+        <p>
+          I look forward to working with you on above mentioned initiatives in Canada and other countries through a collaborative and efficient partnership with generous donors and volunteers.
+        </p>
+        <p>
+          Sincerely,
+        </p>
+        <p>
+          <span class="fromLine">Umm e Ebrahim, <br></span>
+          Founder & Executive Director
+
+        </p>
+      </div>
+      <!-- <div class="col-2"></div> -->
+    </div>
+  </div>
+
+
+</section>
+
+
+
+
 <footer class="justify-content-center py-2 websiteFooter">
-
-
   <div class="container">
     <div class="row">
       <div class="col-12 col-md-2 order-3 order-md-1 text-center">
@@ -260,37 +252,6 @@
 
 
 
-<!-- NUMBER TICKER -->
-
-<script>
-  function animateValue(id, start, end, duration) {
-    var range = end - start;
-    var current = start;
-    var increment = end > start ? 1 : -1;
-    var stepTime = Math.abs(Math.floor(duration / range));
-    var obj = document.getElementById(id);
-    var timer = setInterval(function() {
-      current += increment;
-      obj.innerHTML = current;
-      if (current == end) {
-        clearInterval(timer);
-      }
-    }, stepTime);
-  }
-
-var val1 = document.getElementById("valueOne");
-var val2 = document.getElementById("valueOne");
-var val3 = document.getElementById("valueOne");
-
-  val1.addEventListener = ("scroll", animateValue("valueOne", 0, 40, 5000))
-  document.getElementById("valueTwo").onscroll =  animateValue("valueTwo", 0, 70, 5000);
-  document.getElementById("valueThree").onscroll =  animateValue("valueThree", 0, 500, 5000);
-
-  //
-  //
-  // animateValue("valueTwo", 0, 300, 3000);
-  // animateValue("valueThree", 0, 350, 3500);
-</script>
 
 
 <!-- ENDING TAGS -->
