--- a/mission.html
+++ b/mission.html
@@ -39,7 +39,7 @@
 
 <!--  ############################################################################################################################################################################################# -->
   <!-- Primary Meta Tags -->
-  <title>TIFC - Mission</title>
+  <title>TIFC - Our Mission</title>
   <meta name="title" content="The Ilahi Foundation of Canada">
   <meta name="description" content="Helping the needy, one city at a time">
   <meta name="keywords" content="Pakistan, Clean Water, education">
@@ -107,12 +107,18 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-
-      <li class="nav-item">
-        <a class="nav-link active" href="https://www.my-tifc.org/mission.html">Our Mission</a>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          About
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="mission.html">Our Mission</a>
+          <a class="dropdown-item" href="message.html">Our Message</a>
+        </div>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="https://www.my-tifc.org/islamEdu.html">Islamic Education <span class="sr-only">(current)</span></a>
+
+      <li class="nav-item active">
+        <a class="nav-link" href="islamEdu.html">Islamic Education <span class="sr-only">(current)</span></a>
       </li>
 
 
@@ -121,20 +127,18 @@
           Our Projects
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="https://www.my-tifc.org">Education</a>
-          <a class="dropdown-item" href="https://www.my-tifc.org">Food Bank</a>
-          <a class="dropdown-item" href="https://www.my-tifc.org">Social Welfare</a>
+          <a class="dropdown-item" href="#">Education</a>
+          <a class="dropdown-item" href="#">Food Bank</a>
+          <a class="dropdown-item" href="#">Social Welfare</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="https://www.my-tifc.org">Volunteer</a>
+          <a class="dropdown-item" href="#">Volunteer</a>
         </div>
       </li>
-
-
     </ul>
-
-
+    <!-- <form class="form-inline my-2 my-lg-0" action="https://my-tifc.org/donate.html"> -->
+      <!-- <input class="form-control mr-sm-2" type="search" placeholder="$" aria-label="Search"> -->
       <a href="https://www.my-tifc.org/donate.html" class="aTagContrib"><button class="btn btn-outline-danger my-2 my-sm-0 contribute-button" type="submit">Contribute</button></a>
-
+    <!-- </form> -->
     </div>
     </nav>
 
