--- a/index.html
+++ b/index.html
@@ -96,9 +96,16 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="https://www.my-tifc.org/mission.html">Our Mission</a>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          About
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="mission.html">Our Mission</a>
+          <a class="dropdown-item" href="message.html">Our Message</a>
+        </div>
       </li>
+
       <li class="nav-item active">
         <a class="nav-link" href="islamEdu.html">Islamic Education <span class="sr-only">(current)</span></a>
       </li>
@@ -142,7 +149,7 @@
 
   <div class="overlay">
     <h1 id="mainTitle">
-      The Ilahi <br> Foundation Of <br> Canada
+      The Ilahi Foundation Of Canada
     </h1>
   </div>
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
