--- a/donate.html
+++ b/donate.html
@@ -121,7 +121,7 @@
           <a class="dropdown-item" href="#">Food Bank</a>
           <a class="dropdown-item" href="#">Social Welfare</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Volunteer</a>
+          <a class="dropdown-item" href="volunteer.html">Volunteer</a>
         </div>
       </li>
     </ul>
@@ -135,7 +135,7 @@
     </div>
 
   </section>
-  
+
 <section class="donation-form">
 
   <div class="container">
