--- a/islamEdu.html
+++ b/islamEdu.html
@@ -122,7 +122,7 @@
           <a class="dropdown-item" href="#">Food Bank</a>
           <a class="dropdown-item" href="#">Social Welfare</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Volunteer</a>
+          <a class="dropdown-item" href="volunteer.html">Volunteer</a>
         </div>
       </li>
     </ul>
