--- a/mission.html
+++ b/mission.html
@@ -131,7 +131,7 @@
           <a class="dropdown-item" href="#">Food Bank</a>
           <a class="dropdown-item" href="#">Social Welfare</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Volunteer</a>
+          <a class="dropdown-item" href="volunteer.html">Volunteer</a>
         </div>
       </li>
     </ul>
@@ -173,7 +173,7 @@
   </div>
 
   <div class="container-flex withPic py-5">
-<img src="imgs/missionPic.png" alt="mission Pic" style="width:100%;">
+    <img src="imgs/missionPic.png" alt="mission Pic" style="width:100%;">
 
 
 
