--- a/volunteer.html
+++ b/volunteer.html
@@ -39,7 +39,7 @@
 
 <!--  ############################################################################################################################################################################################# -->
   <!-- Primary Meta Tags -->
-  <title>TIFC</title>
+  <title>TIFC - Volunteer</title>
   <meta name="title" content="The Ilahi Foundation of Canada">
   <meta name="description" content="Helping the needy, one city at a time">
   <meta name="keywords" content="Pakistan, Clean Water, education">
@@ -77,6 +77,7 @@
 
   <!-- Custom CSS -->
   <link rel="stylesheet" href="app.css">
+  <link rel="stylesheet" href="donate.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
 
@@ -135,162 +136,42 @@
 
   </section>
 
-
-
-
-<section class="landing">
-
-
-  <!-- <div class="container"> -->
-    <div class="logoImg">
-      <img src="imgs/logo.png"  id="logoImgReal" alt="" width="150px">
-    </div>
-
-
-  <div class="overlay">
-    <h1 id="mainTitle">
-      The Ilahi Foundation Of Canada
-    </h1>
-  </div>
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100 bckgImg full-width" src="imgs/backgroundImg.png" alt="First slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100 bckgImg full-width" src="imgs/backgroundImg2.png" alt="Second slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100 bckgImg full-width" src="imgs/backgroundImg3.png" alt="Second slide">
-      </div>
-    </div>
-    <!-- <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a> -->
-    <!-- <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a> -->
-  </div>
-</section>
-
-<section id="whatWeDo">
-  <div class="container">
-    <div class="row">
-      <h1 class="text-center pt-5">What We Do</h1>
-    </div>
-    <div class="row pt-3">
-      <div class="col-12 col-md-4 descriptionSection" data-aos="fade-zoom-in"
-     data-aos-easing="ease-in-back"
-     data-aos-delay="100"
-     data-aos-offset="0">
-        <h2>Education</h2>
-        <img src="imgs/education.png" class="clipartImages" alt="" width="70px">
-        <p>The Ilahi Foundation has partnered with ISHRAQ Schooling System (ISS) to ensure children from poor backgrounds are receiving proper education in a safe environment. ISS is a non-profit and non-commercial institution which focuses on educating children with less privileges in a competitive standard to make them excel in knowledge, character, and positive action. </p>
-
-      </div>
-      <div class="col-12 col-md-4 descriptionSection" data-aos="fade-zoom-in"
-     data-aos-easing="ease-in-back"
-     data-aos-delay="300"
-     data-aos-offset="0">
-        <h2>Food Bank</h2>
-        <img src="imgs/foodBank.jpg"  class="clipartImages" alt="" width="100px">
-        <p>TIFC is committed to help those in need of food. Our goal is to provide food and supplies to less-fortunate families across the globe. We aim to collect and provide at least $50 a month to ensure the needs of poor families.</p>
-      </div>
-      <div class="col-12 col-md-4 descriptionSection"data-aos="fade-zoom-in"
-     data-aos-easing="ease-in-back"
-     data-aos-delay="500"
-     data-aos-offset="0">
-        <h2>Social Welfare</h2>
-        <img src="imgs/socialWelfare.jpg" class="clipartImages" alt="" width="100px">
-        <p>Our recent and ongoing projects include building wells and providing clean drinking water in poor communities across the globe. TIFC has initiated a water supply system, Sabeel-e-Rehmat (SER), to ensure that clean drinking water is being provided to poor communities around the world.</p>
-      </div>
-    </div>
-  </div>
-<!-- </div> -->
-</section>
-
-
-
-
-<section class="aid-tracker">
-  <div id="first-aid-box">
-    <img src="imgs/first-aid-box.png" alt="" width="150px">
-  </div>
-
+<section class="volunteer-form">
+<h2 class="text-center pb-4">Volunteer Form</h1>
   <div class="container">
 
     <div class="row">
-      <div class="col-12 col-md-3">
-        <h2>Aid Tracker: </h2>
+      <div class="col-12 justify-content-center">
+
+    <form action="https://submit-form.com/IjE128LkYdcNLrpnRiSGs" target="_self">
+      <div class="form-group">
+        <label for="exampleFormControlInput1">Name</label>
+        <input name="name" type="name" class="form-control" id="exampleFormControlInput1" placeholder="Fulan AlFulani">
       </div>
-      <div class="col-12 col-md-3">
-        <span class="big-number" id="valueOne">2</span>
-        <br>
-        <p>Wells Built</p>
+    <div class="form-group">
+      <label for="exampleFormControlInput1">Email address</label>
+      <input name="email" type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+    </div>
+    <div class="form-group">
+      <label for="exampleFormControlInput1">Telephone</label>
+      <input name="phoneNumber" type="tel" class="form-control" id="exampleFormControlInput1" placeholder="1-(555)-555-5555">
+    </div>
+
+    <div class="form-group">
+      <label for="exampleFormControlTextarea1">Volunteer Interests</label>
+      <textarea name="volunteerInterests" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    </div>
+    <button class="btn btn-outline-danger my-2 my-sm-0 submit-button" type="submit">Submit</button>
+
+  </form>
+
+
       </div>
-      <div class="col-12 col-md-3">
-        <span class="big-number" id="valueTwo">3</span>
-        <br>
-        <p>Schools Created</p>
-      </div>
-      <div class="col-12 col-md-3">
-        <span class="big-number" id="valueThree">35</span>
-        <br>
-        <p>Children Enrolled</p>
-      </div>
+
     </div>
-<div class="row updatedSinceRow">
-  <p>
-    Updated 10AM Today | Since Aug 2017
-  </p>
-</div>
-  </div>
-</section>
-
-
-
-<section class="why-care">
-  <div class="container">
-    <h1 class="pt-5">Why Care</h1>
-    <div class="item item--secondary" data-aos="fade-right" data-aos-anchor="#trigger-left" data-aos-anchor-placement="top-top">
-    <img src="imgs/waterInfoGraphic.png" class="animatedPictures" alt="" width="400px">
-    </div>
-
-    <div class="item item--primary" data-aos="fade-left" data-aos-anchor="#trigger-right" data-aos-anchor-placement="top-center">
-
-      <img src="imgs/pakistanMap.png" class="animatedPictures" alt="" width="400px">
-    </div>
-
-    <div class="item" id="trigger-left" data-aos="fade-up"><span>11.5% of people </span>defecate in the open.</div>
-    <div class="item" data-aos="fade-up">
-        <span>79 million people</span> lack decent toilets.
-    </div>
-    <div class="item" data-aos="fade-up"><span>45% of children</span> under the age of five are stunted.</div>
-    <div class="item" data-aos="fade-up"><span>22 million people </span> don’t have access to clean water close to home.</div>
-    <div class="item" id="trigger-right" data-aos="fade-up">
-        Pakistan is the sixth best country for improving access to decent toilets, <span>increasing coverage by 27%.</span>
-    </div>
-    <div class="item" data-aos="fade-up">Every <span>$1 invested in water and toilets </span> returns an average of $4 in increased productivity. <span class="citation">(WHO, 2012)</span></div>
-    <div class="item" data-aos="fade-up">In Pakistan, we reached over <span>77,000 people</span> with clean water, 200,000 with decent toilets and 220,000 with good hygiene between 2016 and 2017.</div>
-    <div class="item" data-aos="fade-up">Around the world up to 443 million school days are lost every year because of water-related illnesses. <span class="citation">(Human Development Report, 2006)</span></div>
-    <div class="item" data-aos="fade-up">If everyone, everywhere had clean water, the number of diarrhoeal deaths would be cut by a third. <span class="citation">(Tropical Medicine and International Health, 2014)</span></div>
-    <div class="item" data-aos="fade-up">The World Bank says promoting good hygiene is one of the most cost effective health interventions.<span class="citation">(Disease Control Priorities, third edition (volume 2), 2016)<span></div>
-    <div class="item" data-aos="fade-up"><span>98% of the richest </span>people and only 79.2% of the poorest people in Pakistan have clean water.</div>
-    <div class="item" data-aos="fade-up"><span>19,500 children</span> under five die each year from diarrhoeal related diseases</div>
   </div>
 
-
 </section>
-
-
-
 
 <footer class="justify-content-center py-2 websiteFooter">
 
@@ -311,12 +192,7 @@
       </div>
 
       <div class="col-12 col-md-2 justify-content-center align-self-center order-2 order-md-3 text-center">
-        <!-- <form class="form-inline my-2 my-lg-0" action="https://my-tifc.org/donate.html" METHOD="POST"> -->
-          <!-- <input class="form-control mr-sm-2" type="search" placeholder="$" aria-label="Search"> -->
-          <!-- <button class="btn btn-outline-danger my-2 my-sm-0 contribute-button" type="submit">Contribute</button> -->
-          <a href="https://my-tifc.org/donate.html"><button type="submit" class="btn btn-danger contribute-button">Contribute</button></a>
-        <!-- </form> -->
-
+        <a href="https://my-tifc.org/donate.html"><button type="submit" class="btn btn-danger contribute-button">Contribute</button></a>
       </div>
 
     </div>
@@ -380,6 +256,7 @@ var val3 = document.getElementById("valueOne");
   $(".example5").click(function(){ $(this).toggleClass("open"); });
 
 </script>
+
 
 <!-- AOS ANIMATE -->
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
