--- a/volunteer.html
+++ b/volunteer.html
@@ -107,23 +107,57 @@
         </div>
       </li>
 
-      <li class="nav-item active">
-        <a class="nav-link" href="islamEdu.html">Islamic Education <span class="sr-only">(current)</span></a>
-      </li>
 
 
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Our Projects
+          Education
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Education</a>
+          <a class="dropdown-item" href="#">Ishraq School</a>
+          <a class="dropdown-item" href="islamEdu.html">Online Islamic Education</a>
+        </div>
+      </li>
+
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Women Empowerment
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">KhanDan</a>
+          <a class="dropdown-item" href="islamEdu.html">Women's Aid</a>
+        </div>
+      </li>
+
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Social Welfare
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Emergency Aid & Relief</a>
+
+        </div>
+      </li>
+
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Food
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Dustar Khan</a>
           <a class="dropdown-item" href="#">Food Bank</a>
-          <a class="dropdown-item" href="#">Social Welfare</a>
+          <a class="dropdown-item" href="#">Food Drive</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="volunteer.html">Volunteer</a>
         </div>
       </li>
+
+
+      <li class="nav-item">
+        <a class="nav-link" href="#">Qurbani<span class="sr-only">(current)</span></a>
+      </li>
+
+
     </ul>
     <!-- <form class="form-inline my-2 my-lg-0" action="https://my-tifc.org/donate.html"> -->
       <!-- <input class="form-control mr-sm-2" type="search" placeholder="$" aria-label="Search"> -->
