--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">KhanDan</a>
-          <a class="dropdown-item" href="islamEdu.html">Women's Aid</a>
+          <a class="dropdown-item" href="#">Women's Aid</a>
         </div>
       </li>
 
