--- a/message.html
+++ b/message.html
@@ -135,7 +135,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">KhanDan</a>
-          <a class="dropdown-item" href="islamEdu.html">Women's Aid</a>
+          <a class="dropdown-item" href="#">Women's Aid</a>
         </div>
       </li>
 
@@ -201,7 +201,7 @@
           Respected Brothers & Sisters,
         </p>
         <div class="container salaam">
-        <img src="imgs/salaam.png" alt="mission Pic" style="width:30%;">
+        <img src="imgs/salaam.png" alt="mission Pic" style="width:10rem;">
         </div>
 
         <p>
