--- a/islamEdu.html
+++ b/islamEdu.html
@@ -126,7 +126,7 @@
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">KhanDan</a>
-          <a class="dropdown-item" href="islamEdu.html">Women's Aid</a>
+          <a class="dropdown-item" href="#">Women's Aid</a>
         </div>
       </li>
 
