--- a/public/index.html
+++ b/public/index.html
@@ -24,5 +24,6 @@
       height: 800, // default - height : 400
       interval: 8000 // default - interval: 6000
     });
+    $('.sidenav').sidenav();
   </script>
 </html>
