Added section tags and tab icon.

--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="TIFC" content="TIFC" />
+    <link rel="icon" href="https://my-tifc.org/imgs/logo.png" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
 
-    <title>TIFC | A Good Cause</title>
+    <title>TIFC | Ilahi Foundation</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
