actually fixed footer. . . at the cost of a warning.

--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,7 @@
 
     <title>TIFC | Ilahi Foundation</title>
   </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+  <body id="root"></body>
   <script>
     $('.slider').slider({
       full_width: true,
